--- a/Selección Características Biclásico.ipynb
+++ b/Selección Características Biclásico.ipynb
@@ -5,19 +5,11 @@
    "metadata": {},
    "source": [
     "# Selección de Características\n",
-    "## Asignatura: Minería de Datos\n",
     "\n",
     "### Autor: Silvia García Hernández                                                                    \n",
     "### Fecha: 27/04/2019\n",
     "\n",
-    "#### La práctica consiste en:\n",
-    "\n",
-    "- Implementará la estrategia de búsqueda como una función. \n",
-    "- Implementará la medida correspondiente también como una función que acepte un subconjunto de atributos y devuelva el valor de la medida para el mismo. \n",
-    "- Entrenar un clasificador con el mejor subconjunto de 5 atributos seleccionado. \n",
-    "- Entrenar el mismo clasificador que en el punto anterior con la proyección del conjunto  inicial  de  características  mediante  PCA  manteniendo  el  95%  de  la variabilidad inicial. \n",
-    "- Para cada uno de los dos puntos anteriores obtener: tasa de acierto, recall, precision, curva ROC y el área bajo la curva (AUC). \n",
-    "#### Para resolver lo anterior se va a usar la estrategia de búsqueda Plus-3 Minus-2 y MIFS como Función de Evaluación"
+    "#### Se va a usar la estrategia de búsqueda Plus-3 Minus-2 y MIFS como Función de Evaluación"
    ]
   },
   {
